--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>React App</title>
   </head>
   <!-- style = "background-color:#181A1B;" -->
-  <body  >
+  <body style = "background-color:#181A1B;" >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" ></div>
     <!--
